--- a/app/src/main/res/drawable/ic_baseline_pets.xml
+++ b/app/src/main/res/drawable/ic_baseline_pets.xml
@@ -1,6 +1,6 @@
-<vector android:height="128dp" android:tint="#FF9257"
+<vector android:height="64dp" android:tint="#FF85C9"
     android:viewportHeight="24" android:viewportWidth="24"
-    android:width="128dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M4.5,9.5m-2.5,0a2.5,2.5 0,1 1,5 0a2.5,2.5 0,1 1,-5 0"/>
     <path android:fillColor="@android:color/white" android:pathData="M9,5.5m-2.5,0a2.5,2.5 0,1 1,5 0a2.5,2.5 0,1 1,-5 0"/>
     <path android:fillColor="@android:color/white" android:pathData="M15,5.5m-2.5,0a2.5,2.5 0,1 1,5 0a2.5,2.5 0,1 1,-5 0"/>
