--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_joined_date" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_my_likes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -78,15 +78,15 @@
         app:srcCompat="@drawable/ic_baseline_favorite" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tv_my_likes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/my_likes"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintEnd_toEndOf="@+id/iv_my_likes"
+        app:layout_constraintStart_toStartOf="@+id/iv_my_likes"
+        app:layout_constraintTop_toBottomOf="@+id/iv_my_likes" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -94,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/iv_my_likes"
         app:layout_constraintTop_toBottomOf="@+id/divider"
         app:srcCompat="@drawable/ic_baseline_library_books" />
 
